🐛 FIX: message iframe vertically doesn't fit the container / available space

--- a/css/mobile.scss
+++ b/css/mobile.scss
@@ -15,7 +15,6 @@
 		background: #fff;
 		width: 100%;
 		left: 0;
-		height: 100%;
 		top: 0;
 	}
 
